Fix: Adjusted CSS to prevent logo image overflow on mobile view

--- a/normalice.css
+++ b/normalice.css
@@ -146,6 +146,7 @@ sup {
  */
 
 img {
+  max-width: 80%;
   border-style: none;
 }
 
